--- a/my_site/my_app/templates/my_app/resume.html
+++ b/my_site/my_app/templates/my_app/resume.html
@@ -63,8 +63,8 @@
                         Resume
                     </h2>
                     <br>
-                    <a style="font-family:Arial, Helvetica, sans-serif;font-size:24px;">Select a pdf file to
-                        Upload</a>
+                    <a style="font-family:Arial, Helvetica, sans-serif;font-size:24px;">Select a PDF file to
+                        upload</a>
                     </br>
                     <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
