--- a/my_site/my_app/templates/my_app/profile.html
+++ b/my_site/my_app/templates/my_app/profile.html
@@ -45,7 +45,7 @@
           </li>
           <li class="nav-item m-1">
             <a class="btn btn-secondary text-white  mx-2 px-2 " data-toggle="tooltip" data-placement="bottom"
-              title="View Resume" target="blank" href="{{ user.Profile.pdfs.url }}"><i class="fa fa-id-card"></i></a>
+              title="View Resume" target="blank" href="{{ user.Profile.resume.url }}"><i class="fa fa-id-card"></i></a>
           </li>
           <li class="nav-item active m-1">
             <a class="btn btn-secondary text-white  mx-2 px-2 " data-toggle="tooltip" data-placement="bottom"
