--- a/my_site/my_app/templates/my_app/update_profile.html
+++ b/my_site/my_app/templates/my_app/update_profile.html
@@ -57,6 +57,17 @@ label[for="id_emails"]::after{
   top: 2px;
 }
 
+label[for="id_image"] {
+  visibility:hidden;
+}
+label[for="id_image"]::after{
+  visibility: visible;
+  display: block;
+  content: 'Image ';
+  padding: 5px;
+  top: 2px;
+}
+
 
   </style>
 
