--- a/my_site/my_app/templates/my_app/admin_page.html
+++ b/my_site/my_app/templates/my_app/admin_page.html
@@ -25,7 +25,7 @@
 
 <body>
 
-<nav class="navbar  navbar-expand-lg  navbar-dark bg-dark">
+  <nav class="navbar  navbar-expand-lg  navbar-dark bg-dark">
 
     <button class="navbar-toggler" type="button" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,16 +33,16 @@
     </button>
 
     <div class="collapse navbar-collapse d-flex justify-content-end icon-bar" id="navbarSupportedContent">
- 
+
       <div>
-        <ul class="navbar-nav mr-auto">          
-        <li class="nav-item active m-1 ">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active m-1 ">
             <a class="btn btn-secondary text-white  mx-2 px-2 " data-toggle="tooltip" data-placement="bottom"
               title="Profile" href="{% url 'my_app:admin_profile' %}"><i class="fa fa-home"></i></a>
           </li>
-        <li class="nav-item active m-1 ">
-          <a class="navbar-brand" href="#">Admin Control Page</a>
-        </li>
+          <li class="nav-item active m-1 ">
+            <a class="navbar-brand" href="#">Admin Control Page</a>
+          </li>
         </ul>
       </div>
       <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
@@ -58,9 +58,9 @@
     </div>
   </nav>
 
-   {% comment %} <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="btn btn-secondary navbar-brand text-white py-2  " style="width:50px;" data-toggle="tooltip" data-placement="bottom"
-      title="Profile" href="{% url 'my_app:admin_profile' %}"><i class="fa fa-home"></i></a>
+  {% comment %} <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="btn btn-secondary navbar-brand text-white py-2  " style="width:50px;" data-toggle="tooltip"
+      data-placement="bottom" title="Profile" href="{% url 'my_app:admin_profile' %}"><i class="fa fa-home"></i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -70,16 +70,16 @@
       <ul class="navbar-nav mr-auto icon-bar">
         <li class="nav-item active m-1 ">
           <a class="navbar-brand" href="#">Admin Control Page</a>
-        </li> 
+        </li>
 
 
 
-       </ul>
+      </ul>
       <form class="nav-item my-2 my-lg-0">
         <a class="btn btn btn-light my-2 my-sm-0" type="button" href="{% url 'my_app:logout_url' %}">Logout</a>
       </form>
     </div>
-  </nav>  {% endcomment %}
+  </nav> {% endcomment %}
   <style>
     .icon-bar a {
       float: left;
