--- a/my_site/my_app/templates/my_app/admin_page.html
+++ b/my_site/my_app/templates/my_app/admin_page.html
@@ -122,7 +122,7 @@ by Darshan Bajania
           <tr>
             <td>{{ item.name  }}</td>
             <td>
-              <input type="text" class="form-control" id={{item.name}} name={{item.name}} value={{ item.prop_no }}>
+              <input type="number" class="form-control" id={{item.name}} name={{item.name}} value={{ item.prop_no }}>
             </td>
           </tr>
           {% endfor %}
